   - Bump build-depends on python-all-dev to >= 2.6.6-3~ for dh_python2 support
   - Remove python-support build-depends.
   - Use X-Python-Version instead of debian/pyversions.
  * debian/libawn1.symbols:
   - Update with new symbols. 
  * debian/gbp.conf:
   - Add gbp configuration.
  * debian/rules:
   - Use --with python2
   - Passing --no-guessing-versions to dh_python2

 -- Julien Lavergne <julien.lavergne@gmail.com>  Thu, 14 Jul 2011 11:54:48 +0200

avant-window-navigator (0.4.0-2.1) unstable; urgency=low

   * Non-maintainer upload.
   * debian/patches/ld-no-add-needed.patch
     - fix a FTBFS with ld --no-add-needed; patch from ubuntu; Closes: #605875

 -- Sandro Tosi <morph@debian.org>  Thu, 02 Jun 2011 20:45:08 +0200

avant-window-navigator (0.4.0-2) unstable; urgency=medium

  * Set priority to medium to fix RC bug.
  * debian/control:
   - Add Conlicts/Replaces between libawn0-dbg and libawn1-dbg.
     (Closes: #586031)
  * debian/NEWS
   - Mention some incompatible changes with previous version.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Wed, 23 Jun 2010 00:13:20 +0200

avant-window-navigator (0.4.0-1) unstable; urgency=low

  * New upstream release.
   - Fix icons placed outside the panel. Closes: #471661
   - Add an option to go under the panel. Closes: #474228
   - Fix autohide behavior. LP: #130235
   - Allow only 1 instance of Awn. LP: #258675
   - Ensure the autostart exist before trying to delete it. LP: #334454
   - Fix position with multiple screen. LP: #248769
   - Fix crash when event is NULL. LP: #550541
   - Fix crash in awn-setting when adding applet. LP: #557778
  * debian/patches:
   - 10_correct_exception.patch: Dropped, problem fixed in the new version.
   - 00-wm-behavior.patch and 01-tasks-have-arrow.patch: Merged upstream.
   - 02-ftbfs-python-2.6.patch: Refresh.
   - 03-python-import.patch: Refresh.
   - 01-bad-pointer-init.patch: From upstream, bad unitialized pointer.
  * Bump libawn SONAME
  * debian/control: