@@ -1,12 +1,12 @@
 #!/usr/bin/make -f
 #DH_VERBOSE=1
 
+LDFLAGS +="-Wl,-z,defs -Wl,--as-needed"
+
 configure_flags +=  --prefix=/usr \
 					--disable-pymod-checks \
 					--enable-gtk-doc \
-					--with-gconf-schema-file-dir=/etc/gconf/schemas \
-					LDFLAGS="-Wl,-z,defs -Wl,--as-needed"
-
+					--with-gconf-schema-file-dir=/etc/gconf/schemas
 
 %:
 	dh --with python2 $@
